--- a/style.css
+++ b/style.css
@@ -11,14 +11,11 @@ html,body{
     width: 100vw;
     overflow-x: hidden;
 }
-/* ------------------------------------------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------------------------------------------ */
 .page1{
     height: 100vh;
     width: 100vw;
     background-color: #180830;
-
-    
-
 }
 .nav{
     height: 15%;
@@ -56,13 +53,12 @@ html,body{
     align-items: center;
 }
 .right>.btn1{
-  
-  
   border-radius: 20px;
   padding: 10px 20px ;
   font-size: 14px;
   background-color: #3A70FF;
   color: white;
+  margin-bottom: 17px;
 }
 .right>.btn1:hover{
     background-color:  #f16102;
@@ -71,7 +67,7 @@ html,body{
     color:  #f16102;
 }
 
-/* --------------------------------------------------------------------------------------------------------------------------------------- */
+/* -----------------------------------------------------------------Nav---------------------------------------------------------------- */
 .box{
     height: 85%;
     width: 100%;
@@ -131,7 +127,7 @@ h1{
 }
 
 
-/* --------------------------------------------------------------------------------------------------------------------------------------- */
+/* --------------------------------------------------------------page1--------------------------------------------------------------- */
  .page2{
     height: 67vh;
     width: 100vw;
@@ -147,18 +143,19 @@ h1{
     /* background-color: white; */
     border-radius: 20px;
   
-    border: 1px solid #f16102;
+    border: 2px solid #f16102;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+   
     gap: 20px;
     transition: all ease .5s;
-    /* text-align: center; */
+    text-align: center;
     /* padding: 20px 20px 20px 20px; */
  }
  .card1:hover{
-    border: 1px solid white;
+    border: 2px solid white;
 
 }
  h2{
@@ -166,21 +163,23 @@ h1{
     margin: 0%;
     
  }
- p{
+ .card1>p, .card2>p, .card3>p{
     color: white;
     width: 80%;
     text-align: center;
     font-size: 18px;
     margin: 0%;
+    /* background-color: red; */
+    /* padding: 0px; */
  }
 
-
- .card2{
+.card2{
     height: 55vh;
     width: 25vw;
     /* background-color: white; */
     border-radius: 20px;
-    border: 1px solid #f16102;
+    border: 2px solid #f16102;
+
 
     display: flex;
     align-items: center;
@@ -190,7 +189,7 @@ h1{
      transition: all ease .5s
  }
  .card2:hover{
-    border: 1px solid white;
+    border: 2px solid white;
 
 }
  .card3{
@@ -200,7 +199,8 @@ h1{
     border-radius: 20px;
     gap: 20px;
     
-    border: 1px solid #f16102;
+    border: 2px solid #f16102;
+
 
     display: flex;
     align-items: center;
@@ -209,12 +209,12 @@ h1{
     transition: all ease .5s
     }
     .card3:hover{
-        border: 1px solid white;
+        border: 2px solid white;
     
     }
- /* ----------------------------------------------------------------------------------------------------------------- */
+ /* ------------------------------------------------------------------page2-------------------------------------------------------- */
  .page3{
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
     background-color: #180830;
 
@@ -229,6 +229,7 @@ h1{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
  }
 
  .box1> h1{
@@ -236,16 +237,19 @@ h1{
     margin-left: 160px;
     font-family: 'Roboto Slab', sans-serif;
     line-height: 52px;
+    margin-top: 100px;
     
 }
 
-#p1{
+.box1>p{
   
   width: 70%;
-  line-height: 20px;
+  line-height: 23px;
   font-size: 15px;
   font-family: Lato, sans-serif;
   text-align: start;
+  color: rgb(223, 216, 216);
+  /* background-color: red; */
 }
 .btn3{
     background-color: #3A70FF;
@@ -254,6 +258,7 @@ h1{
     margin-right: 500px;
     color: white;
     margin-bottom: 90px;
+    margin-top: 20px;
 }
 .box1>.btn3:hover{
     background-color:  #f16102;
@@ -277,7 +282,7 @@ h1{
 }
 
 
-/* ------------------------------------------------------------------------------------------------------------ */
+/* ----------------------------------------------------------------------page3------------------------------------------------------- */
 .page4{
     height: 80vh;
     width: 100vw;
@@ -292,7 +297,7 @@ h1{
     width: 18vw;
     border-radius: 10px;
     /* background-color: #fff; */
-    border: 1px solid #f16102;
+    border: 2px solid #f16102;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -304,7 +309,7 @@ h1{
 }
 
 .card11:hover{
-    border: 1px solid white;
+    border: 2px solid white;
 
 }
 .card11>.btn4:hover{
@@ -346,7 +351,7 @@ object-fit: cover;
     width: 18vw;
     border-radius: 10px;
     /* background-color: #fff; */
-    border: 1px solid #f16102;
+    border: 2px solid #f16102;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -357,7 +362,7 @@ object-fit: cover;
     
 }
 .card22:hover{
-    border: 1px solid white;
+    border: 2px solid white;
 
 }
 
@@ -399,7 +404,7 @@ object-fit: cover;
     width: 18vw;
     border-radius: 10px;
     /* background-color: #fff; */
-    border: 1px solid #f16102;
+    border: 2px solid #f16102;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -409,7 +414,7 @@ object-fit: cover;
     transition: all ease .5s;
 }
 .card33:hover{
-    border: 1px solid white;
+    border: 2px solid white;
 
 }
 
@@ -451,7 +456,7 @@ object-fit: cover;
     width: 18vw;
     border-radius: 10px;
     /* background-color: #fff; */
-    border: 1px solid #f16102;
+    border: 2px solid #f16102;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -461,7 +466,7 @@ object-fit: cover;
     transition: all ease .5s;
     }
     .card44:hover{
-        border: 1px solid white;
+        border: 2px solid white;
     
     }
     
@@ -477,9 +482,10 @@ object-fit: cover;
         color: #f16102;
         margin: 0%;
     }
-    .card44> p{
+    .card11, .card22, .card33, .card44> p{
         color: #CCCCCC;
         margin: 0%;
+        line-height: 25px;
     
     }
     .card44>img{
@@ -498,19 +504,19 @@ object-fit: cover;
     
     }
 
-/* ----------------------------------------------------------- */
+/* -------------------------------------------------------------page4------------------------------------------------------------- */
 .page5{
-    height: 100vh;
+    height: 110vh;
     width: 100vw;
     background-color:#180830 ;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     
 }
 .purplebox{
-    height: 80vh;
-    width: 80vw;
+    height: 90vh;
+    width: 85vw;
     /* background-color: white;     */
     
     background-image: url("https://assets.website-files.com/63ef5085a90a07301ff48580/63ef64e2ffdee80535e70523_shape_bg%20(1).svg");
@@ -525,7 +531,7 @@ object-fit: cover;
 }
 .L{
     height: 100%;
-    width: 70vw;
+    width: 40vw;
     /* background-color: rgb(71, 40, 40); */
     /* position: absolute; */
 
@@ -533,18 +539,26 @@ object-fit: cover;
     align-items: start;
     justify-content: center;
     flex-direction: column;
-    padding-left: 80px;
+    padding-left: 100px;
     gap: 20px;
+    margin-top: 70px;
 }
-.hpage5{
+.L > h2{
     text-align: start; 
-    font-size: 40px;
+    font-size: 50px;
+    font-weight: 900;
+    line-height: 48px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 
-p{
+.L > p{
    text-align: start; 
-   width: 79%;
+   width: 100%;
+   color: #ccc;
+   /* background-color: red; */
+   line-height: 23px;
+   font-size: 17px;
 }
 button{
     border-radius: 20px;
@@ -553,6 +567,7 @@ button{
   background-color: #3A70FF;
   border: none;
   color: white;
+  margin-top: 20px;
 }
 .L>button:hover{
     background-color: #f16102;
@@ -562,14 +577,17 @@ button{
     height: 100%;
     width: 60vw;
     /* background-color: papayawhip; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .R> img{
+    
     height: 100%;
-    width: 100%;
     
 }
 
-/* --------------------------------------------------------- */
+/* -----------------------------------------------------------page5------------------------------------------------------------------ */
 
 .page6{
     height: 50vh;
@@ -578,33 +596,31 @@ button{
     
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
-
-
-    
-    
 }
 .ftr.left{
     width: 25%;
-    height: 50%;
+    height: 60%;
     /* background-color: wheat; */
     gap: 10px;
     display: flex;
     align-items: start;
-    justify-content: center;
+    justify-content: start;
     flex-direction: column;
     
 } 
 .ftr.left> img{
     margin-left: 15px;
 }
-#ftr.l.p{
+ .ftr.left > p{
 color: #cccccc;
-font-size: 10px;
-}
+font-size: 18px;
+margin-left: 15px;
+} 
+/* ---------------- */
 .center{
-    width: 25%;
+    width: 20%;
     height: 100%;
     /* background-color: white;  */
 
@@ -614,29 +630,31 @@ font-size: 10px;
     flex-direction: column;
 }
 .heading{
-    height: 30%;
+    height: 20%;
     width: 100%;
     color: white;
+    font-size: 18px;
+    font-weight: 900;
     /* background-color: pink; */
 
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: start;
 }
 .middle{
     width: 100%;
-    height: 30%;
+    height: 15%;
+    line-height: 20px;
     
     color: #cccccc;
     /* background-color: rgb(14, 111, 238); */
 }
 .bottom{
-    width: 100%;
+    width: 80%;
     height: 20%;
     color: #cccccc;
-    
-    
 }
+/* ------------------------- */
 
 .footerright{
     width: 20%;
@@ -646,16 +664,19 @@ font-size: 10px;
     justify-content: center;
     align-items: start;
    flex-direction: column; 
+   
     
     }
 
-heading{
+    .footerright> h3{
 color: white;
 }
 .ftr-link{
+    
     font-weight: 300;
     line-height: 30px;
-    font-size: 14px;
+    font-size: 15px;
     color: #cccccc;
-    
 }
+    
+/* }------------------------------------------------------page6------------------------------------------------------------------------- */
